--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -3,7 +3,9 @@
   "dependencies": {
     "express": "^4.13.4",
     "immutable": "^3.7.6",
-    "react": "^0.14.7",
+    "material-ui": "^0.15.0-alpha.2",
+    "react-tap-event-plugin": "^0.2.0",
+    "react": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1"
