--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -14,8 +14,9 @@
     "babelify": "^6",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
-    "gulp-minify-css": "^1.2.3",
+    "gulp-connect-php": "0.0.7",
     "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.3",
     "gulp-webserver": "^0.9.1",
     "vinyl-source-stream": "^1.1.0"
   }
