--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -4,10 +4,11 @@
     "express": "^4.13.4",
     "immutable": "^3.7.6",
     "material-ui": "^0.15.0-alpha.2",
-    "react-tap-event-plugin": "^0.2.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
+    "react-router": "^2.0.1",
+    "react-tap-event-plugin": "^0.2.0",
     "redux": "^3.3.1"
   },
   "devDependencies": {
