--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^4.4.0",
     "react-router": "^2.0.1",
     "react-tap-event-plugin": "^0.2.0",
+    "react-virtualized": "^6.1.2",
     "redux": "^3.3.1"
   },
   "devDependencies": {
