--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -5,13 +5,14 @@
     "express": "^4.13.4",
     "immutable": "^3.7.6",
     "jquery": "^2.2.3",
-    "react": "^0.14.8",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.0",
-    "react-router": "^2.0.1",
-    "react-tap-event-plugin": "^0.2.0",
+    "react": "^15.0.1",
+    "react-addons-shallow-compare": "^15.0.1",
+    "react-dom": "^15.0.1",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.2.2",
+    "react-tap-event-plugin": "^1.0.0",
     "react-virtualized": "^6.1.2",
-    "redux": "^3.3.1"
+    "redux": "^3.4.0"
   },
   "devDependencies": {
     "babelify": "^6",
