--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -24,5 +24,9 @@
     "gulp-minify-css": "^1.2.3",
     "gulp-webserver": "^0.9.1",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "scripts": {
+    "dev": "node app.js",
+    "make": "gulp build & gulp less"
   }
 }
