--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "scripts": {
     "api": "cd accouma_api; php artisan serve",
     "make": "cd accouma_front; gulp build & gulp less"
+  },
+  "dependencies": {
+    "shelljs": "^0.6.0"
   }
 }
