--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -8,6 +8,7 @@
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-icons": "^2.0.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.2",
     "react-tap-event-plugin": "^1.0.0",
