--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "dependencies": {
+    "axios": "^0.11.0",
     "belle": "^2.0.7",
     "express": "^4.13.4",
     "immutable": "^3.7.6",
