--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -6,10 +6,12 @@
     "express": "^4.13.4",
     "immutable": "^3.7.6",
     "jquery": "^2.2.3",
+    "materialize-css": "^0.97.6",
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-icons": "^2.0.0",
+    "react-materialize": "^0.14.3",
     "react-redux": "^4.4.5",
     "react-router": "^2.2.2",
     "react-tap-event-plugin": "^1.0.0",
