--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -22,8 +22,8 @@
     "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-connect-php": "0.0.7",
-    "gulp-less": "^3.0.5",
     "gulp-minify-css": "^1.2.3",
+    "gulp-sass": "^2.3.2",
     "gulp-webserver": "^0.9.1",
     "vinyl-source-stream": "^1.1.0"
   },
