--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -24,11 +24,14 @@
     "gulp-connect-php": "0.0.7",
     "gulp-minify-css": "^1.2.3",
     "gulp-sass": "^2.3.2",
+    "gulp-scsslint": "0.0.5",
     "gulp-webserver": "^0.9.1",
+    "sass-lint": "^1.8.2",
     "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
     "dev": "node app.js",
-    "make": "gulp build & gulp less"
+    "make": "gulp build & gulp sass",
+    "sassLint": "gulp sassLint"
   }
 }
