--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -5,6 +5,9 @@
     "express": "^4.13.4",
     "immutable": "^3.7.6",
     "jquery": "^2.2.3",
+    "jsonwebtoken": "^7.0.1",
+    "jwt-decode": "^2.0.1",
+    "key-storage": "^1.0.1",
     "materialize-css": "^0.97.6",
     "react": "^15.0.1",
     "react-addons-shallow-compare": "^15.0.1",
