--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -17,7 +17,8 @@
     "react-router": "^2.2.2",
     "react-tap-event-plugin": "^1.0.0",
     "react-virtualized": "^6.1.2",
-    "redux": "^3.4.0"
+    "redux": "^3.4.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babelify": "^6",
