--- a/accouma_front/.eslintrc
+++ b/accouma_front/.eslintrc
@@ -16,7 +16,8 @@
     "es6": true
   },
   "rules": {
-    "comma-dangle": 0
+    "comma-dangle": 0,
+    "react/prefer-stateless-function": 0
   },
   "extends": "airbnb"
 }
