create user, change field names some methods

--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -25,6 +25,10 @@
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "eslint": "^3.0.1",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-plugin-import": "^1.13.0",
+    "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-react": "^6.1.2",
     "gulp": "^3.9.1",
     "gulp-connect-php": "0.0.7",
     "gulp-minify-css": "^1.2.3",
