--- a/accouma_front/package.json
+++ b/accouma_front/package.json
@@ -5,6 +5,7 @@
     "express": "^4.13.4",
     "immutable": "^3.8.1",
     "jquery": "^2.2.3",
+    "jsonfile": "^2.4.0",
     "jsonwebtoken": "^7.0.1",
     "jwt-decode": "^2.0.1",
     "key-storage": "^1.0.1",
